@@ -588,8 +588,14 @@
 <td><em>path</em></td>
 <td><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/formaldehyde_tropospheric_air_mass_factor_trueness[]</strong></td>
 </tr>
-<tr class="row-odd"><td><strong>absorbing_aerosol_index</strong></td>
-<td><em>path</em></td>
+<tr class="row-odd"><td rowspan="3"><strong>absorbing_aerosol_index</strong></td>
+<td><em>available</em></td>
+<td>optional</td>
+</tr>
+<tr class="row-even"><td><em>condition</em></td>
+<td>OFFL</td>
+</tr>
+<tr class="row-odd"><td><em>path</em></td>
 <td><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/aerosol_index_340_380</strong></td>
 </tr>
 <tr class="row-even"><td><strong>cloud_albedo</strong></td>
