@@ -4347,10 +4347,10 @@ static void register_hcho_product(void)
     description = "aerosol index";
     variable_definition =
         harp_ingestion_register_variable_full_read(product_definition, "absorbing_aerosol_index", harp_type_float, 1,
-                                                   dimension_type, NULL, description, HARP_UNIT_DIMENSIONLESS, NULL,
-                                                   read_input_aerosol_index_340_380);
+                                                   dimension_type, NULL, description, HARP_UNIT_DIMENSIONLESS,
+                                                   exclude_nrti, read_input_aerosol_index_340_380);
     path = "/PRODUCT/SUPPORT_DATA/INPUT_DATA/aerosol_index_340_380";
-    harp_variable_definition_add_mapping(variable_definition, NULL, NULL, path, NULL);
+    harp_variable_definition_add_mapping(variable_definition, NULL, "OFFL", path, NULL);
 
     register_cloud_variables(product_definition);
 
